glFusion ChangeLog

v1.2
----------
- Update all MooTools-dependent javascript to MooTools 1.2.3 (Mark H.) 
- Added Mootools core and more files to install directory (Eric)
- Changed sizingMethod to properly scale pngfix images (Eric)
- Fixed Windows site link in gl_mooie6warning script (Eric)
- Fixed issue where gl_moomorph wasn't consistently called (Eric)

v1.1.6.pl4
----------
- Setting Admin attribute in group editor did not work.
- Static Pages did not support 'all' as location of centerblock
- Plugin installer would return wrong error message when no file
  was actually uploaded.
- Updated default links entry to point to glFusio Wiki

v1.1.6.pl3
----------
- Static Pages plugin would error with a SQL error when searching if when
  multi-language support is enabled.
- FCKeditor translates latin characters in HTML entities
- Search results do not always display UTF characters properly

v1.1.6.pl2
----------
- Static Pages plugin did not call PLG_itemSaved() and PLG_itemDeleted()
  with the proper parameters.

v1.1.6.pl1
----------
- Links Plugin - when saving a category edit, a SQL error is generated.

v1.1.6
------
- Added min-height property to #gl_wrapper in style.css (Eric)
- Added accordion style toggles to configuration screens for "progressive disclosure" (Eric)
- New showblock auto tag
- Added CUSTOM_css() hook
- Spruced up the search results - for comments show type of comment
  (i.e.; Story > Comment or FileMgmt > Comment)
- Search using date range did not always work properly across all plugins
- Ensure topic selection is presistent when viewing admin story list
- Allow plugin comments to be included in search results
- Tweaks to contact user / author templates; consistent widths and display
- Allow custom/functions.php in theme directory
- Ensure enabling / removing configuration options clears the config
  cache file
- Moved documentation into language directories
- Added PLG_getConfigElementHelp API call